# plutus-pioneers

./: .gitignore  shell.nix
program/code/week02/src/Week02/: Homework1.hs  Homework2.hs
program/code/week03/: plutus-pioneer-program-week03.cabal
program/code/week03/src/: Main.hs
program/code/week03/src/Week03/: Homework1.hs  Homework2.hs
program/code/week04/src/Week04/: Homework.hs
program/code/week05/src/Week05/: Homework1.hs  Homework2.hs
program/code/week07/src/Week07/: RockPaperScissors.hs  TestRockPaperScissors.hs
program/code/week08/src/Week08/: TokenSale.hs
program/code/week08/test/Spec/: Model.hs  Trace.hs
program/code/week09/app/: modification.marlowe
